--- a/backend/kabina_project_api/trunk/src/main/resources/application.properties
+++ b/backend/kabina_project_api/trunk/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
 #spring.jpa.hibernate.ddl-auto = create
 security.basic.enabled=false
+spring.jpa.properties.javax.persistence.validation.mode=none
