--- a/frontend/kabina_project_ui/package.json
+++ b/frontend/kabina_project_ui/package.json
@@ -30,6 +30,7 @@
     "rxjs-compat": "^6.5.2",
     "tslib": "^1.9.0",
     "web-animations-js": "^2.3.2",
+    "xlsx": "^0.15.1",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
